[tool.poetry]
name = "Ketchup"
version = "0.1.0"
description = ""
authors = ["Rocky Burt <rocky.burt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Quart = "^0.15.1"
strawberry-graphql = {extras = ["asgi"], version = "^0.77.10"}
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
line-length = 119  # standard editor width used by github

[tool.isort]
profile = "black"
